# cmake-proj-template

./: CMakeLists.txt  Makefile  README
inc/: config.h.in
inc/gui/: gui.h
inc/util/: util.h
src/: main.c
src/gui/: gui.c
src/util/: util.c
